@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.2
 Date: ????
+  Features:
+    - Added `table.array_sort()`
   Changes:
     - Passing a custom `next` function to `table.for_n_of()` will bypass the key existence check
 ---------------------------------------------------------------------------------------------------
